--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   margin: 30px;
 }
 
-
+/* Media querry */
 @media (max-width: 768px) {
  .body {
     width: 50%;
@@ -121,7 +121,7 @@
     padding: 10px;
     left: 70px;
  }
- 
+
 }
 
   </style>
